fixed stock show page, and label sizes and alignments

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -196,7 +196,7 @@ aside{
     border-radius: 4px 4px 0 0;
     color: #fff;
     font: {
-      size: 16px;
+      size: 18px;
       weight: bold;
       family: verdana;
     }
